# cv-generator

./: .gitignore  LICENSE  README.md  cv_data_example.yaml  cv_template.html  main.py  pyproject.toml  requirements.txt  style.css
